@@ -96,6 +96,12 @@ proc ::tk::ConsoleInit {} {
 		-command tk::ConsoleAbout
     }
 
+    AmpMenuArgs .menubar.edit add separator
+    AmpMenuArgs .menubar.edit add command -label [mc "&Increase font"] \
+        -command {event generate .console <<Console_FontSizeIncr>>}
+    AmpMenuArgs .menubar.edit add command -label [mc "&Reduce font"] \
+        -command {event generate .console <<Console_FontSizeDecr>>}
+
     . configure -menu .menubar
 
     # See if we can find a better font than the TkFixedFont
@@ -375,6 +381,8 @@ proc ::tk::ConsoleBind {w} {
 	<<Console_Transpose>>		<Control-Key-t>
 	<<Console_ClearLine>>		<Control-Key-u>
 	<<Console_SaveCommand>>		<Control-Key-z>
+        <<Console_FontSizeIncr>>	<Control-Key-plus>
+        <<Console_FontSizeDecr>>	<Control-Key-minus>
     } {
 	event add $ev $key
 	bind Console $key {}
@@ -534,6 +542,14 @@ proc ::tk::ConsoleBind {w} {
 		tk::ConsoleInsert %W $x
 	    }
 	}
+    }
+    bind Console <<Console_FontSizeIncr>> {
+        set size [font configure TkConsoleFont -size]
+        font configure TkConsoleFont -size [incr size]
+    }
+    bind Console <<Console_FontSizeDecr>> {
+        set size [font configure TkConsoleFont -size]
+        font configure TkConsoleFont -size [incr size -1]
     }
 
     ##
